Fix listen section on mucis page covered by header by adding some padding

--- a/assets/style.css
+++ b/assets/style.css
@@ -317,6 +317,10 @@ main {
     position: relative;
 }
 
+#listen {
+    padding-top: 80px;
+}
+
 .listen-container {
     width: 90%; 
     height: auto;
